mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: popov-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: popov-test
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017   # Port the service will be exposed on within the cluster
      targetPort: 27017  # Port the MongoDB container is listening on
  type: ClusterIP  # Expose service inside the cluster
