ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ui-deployment
  namespace: popov-test
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: popovychsergiy76/ui:4
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: popov-test
spec:
  selector:
    app: ui  # This should match the labels from your Deployment
  ports:
    - protocol: TCP
      port: 80        # Port on which the service is exposed internally in the cluster
      targetPort: 3000  # Port on which your container is listening
  type: ClusterIP   # Expose the service on a node port
